tests/golden/error/private_constructor_access/main.tg
// Test: E0016 private constructor access from another module.

mod helper;

fn main() -> Nat {
    let x = helper::Red;
    0
}
